# c2pa-structured-text

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: bridge.rs  codec.rs  embed.rs  error.rs  extract.rs  hardbinding.rs  lib.rs  python.rs  wasm.rs
tests/: e2e.rs  matrix.rs
